--- a/ibiza_comunidad/static/sass/_components/_forms.scss
+++ b/ibiza_comunidad/static/sass/_components/_forms.scss
@@ -56,7 +56,7 @@ div.ic__buttons {
             flex: 0 1 auto;
         }
         .ic__comment-body {
-            flex: 1 0 auto;
+            flex: 1 1 auto;
             align-self: stretch;
             border-bottom: 1px solid $light-gray;
             .ic__comment-meta {
